--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -342,6 +342,10 @@
     <Compile Include="Migrations\201704222319357_resettransactiontbl.Designer.cs">
       <DependentUpon>201704222319357_resettransactiontbl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704231844012_chgecolposkod.cs" />
+    <Compile Include="Migrations\201704231844012_chgecolposkod.Designer.cs">
+      <DependentUpon>201704231844012_chgecolposkod.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BaseEntity.cs" />
@@ -359,6 +363,7 @@
     <Compile Include="Models\Transaction.cs" />
     <Compile Include="Models\VM\EmailVO.cs" />
     <Compile Include="Models\VM\FileVO.cs" />
+    <Compile Include="Models\VM\SearchVO.cs" />
     <Compile Include="Models\VM\TableVO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -5036,6 +5041,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704222319357_resettransactiontbl.resx">
       <DependentUpon>201704222319357_resettransactiontbl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704231844012_chgecolposkod.resx">
+      <DependentUpon>201704231844012_chgecolposkod.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
