add maintenance page

--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -42,6 +42,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EPPlus">
       <HintPath>..\..\Update\ContosoUniversity\bin\EPPlus.dll</HintPath>
     </Reference>
@@ -139,12 +147,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.1.0\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
@@ -212,6 +214,8 @@
     <Compile Include="Controllers\JsonDemoController.cs" />
     <Compile Include="Controllers\ListingController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\SAKController.cs" />
+    <Compile Include="Controllers\SKController.cs" />
     <Compile Include="Controllers\TransactionController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -4950,6 +4954,16 @@
     <Content Include="Views\Listing\Index.cshtml" />
     <Content Include="Views\Listing\Details.cshtml" />
     <Content Include="Views\JsonDemo\Index.cshtml" />
+    <Content Include="Views\SAK\Create.cshtml" />
+    <Content Include="Views\SAK\Delete.cshtml" />
+    <Content Include="Views\SAK\Details.cshtml" />
+    <Content Include="Views\SAK\Edit.cshtml" />
+    <Content Include="Views\SAK\Index.cshtml" />
+    <Content Include="Views\SK\Create.cshtml" />
+    <Content Include="Views\SK\Delete.cshtml" />
+    <Content Include="Views\SK\Details.cshtml" />
+    <Content Include="Views\SK\Edit.cshtml" />
+    <Content Include="Views\SK\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
