--- a/bin/MVC5.dll.config
+++ b/bin/MVC5.dll.config
@@ -38,7 +38,7 @@
         </outputCacheProfiles>
       </outputCacheSettings>
     </caching>
-    <customErrors mode="Off">
+    <customErrors mode="On">
       <error statusCode="404" redirect="~/Exception/NotFound" />
     </customErrors>
     <authentication mode="None" />
