--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -362,8 +362,17 @@
     <Compile Include="Migrations\201704291645235_addnewstbl.Designer.cs">
       <DependentUpon>201704291645235_addnewstbl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704291832237_addcomissiontbl.cs" />
+    <Compile Include="Migrations\201704291832237_addcomissiontbl.Designer.cs">
+      <DependentUpon>201704291832237_addcomissiontbl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704291835283_addmembershiptbl.cs" />
+    <Compile Include="Migrations\201704291835283_addmembershiptbl.Designer.cs">
+      <DependentUpon>201704291835283_addmembershiptbl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AffiliateComission.cs" />
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\File.cs" />
     <Compile Include="Models\FilePath.cs" />
@@ -371,8 +380,10 @@
     <Compile Include="Models\IdentityContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipRequest.cs" />
     <Compile Include="Models\News.cs" />
     <Compile Include="Models\Message.cs" />
+    <Compile Include="Models\PosRequest.cs" />
     <Compile Include="Models\RefDataEntity.cs" />
     <Compile Include="Models\SAK.cs" />
     <Compile Include="Models\SeoFriendlyRoute.cs" />
@@ -5101,6 +5112,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704291645235_addnewstbl.resx">
       <DependentUpon>201704291645235_addnewstbl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704291832237_addcomissiontbl.resx">
+      <DependentUpon>201704291832237_addcomissiontbl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704291835283_addmembershiptbl.resx">
+      <DependentUpon>201704291835283_addmembershiptbl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
