--- a/bin/MVC5.dll.config
+++ b/bin/MVC5.dll.config
@@ -20,6 +20,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="mailAccount" value="admin@jomrumahlelong.com" />
+    <add key="mailPassword" value="jomrumaadmin1@" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -38,7 +40,7 @@
         </outputCacheProfiles>
       </outputCacheSettings>
     </caching>
-    <customErrors mode="On">
+    <customErrors mode="Off">
       <error statusCode="404" redirect="~/Exception/NotFound" />
     </customErrors>
     <authentication mode="None" />
