--- a/MVC5.csproj
+++ b/MVC5.csproj
@@ -5274,6 +5274,7 @@
     <Content Include="Views\AppointAgents\Index.cshtml" />
     <Content Include="Views\Shared\footer.cshtml" />
     <Content Include="Views\Shared\header.cshtml" />
+    <Content Include="Views\Shared\_LayoutEmpty.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
