--- a/Web.config
+++ b/Web.config
@@ -51,6 +51,18 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+    <rewrite>
+      <rules>
+        <rule name="beta.jomrumahlelong.com/myapp" stopProcessing="true">
+          <match url=".*" />
+          <conditions>
+            <add input="{HTTP_HOST}" pattern="^beta.jomrumahlelong.com/myapp$" />
+            <add input="{PATH_INFO}" pattern="^/myapp/" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="\myapp\{R:0}" />
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
